CCS-62 refactor: 실시간 게시판 목록 응답에 총 조회수, 총 게시글 수 추가